// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalView renders RTL styling if provided 1`] = `
<div
  className="ModalView-epyFwY c-dialog is-rtl elEhXM"
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders animate styling if provided 1`] = `
<div
  className="ModalView-epyFwY c-dialog is-open elEhXM"
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders default styling 1`] = `
<div
  className="ModalView-epyFwY c-dialog elEhXM"
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;

exports[`ModalView renders large styling if provided 1`] = `
<div
  className="ModalView-epyFwY c-dialog c-dialog--large elEhXM"
  data-garden-id="modals.modal_view"
  data-garden-version="version"
/>
`;
